--- a/web/UKDigitalTwin/example-dt-vis/index.html
+++ b/web/UKDigitalTwin/example-dt-vis/index.html
@@ -83,12 +83,13 @@
 		let rootDirectories = {
 			"Mixed": "./data/set-1",
 			"Zoom Limited": "./data/set-2",
-			"Clustered": "./data/set-3"
+			"Clustered": "./data/set-3",
+			"Buildings": "./data/set-4"
 		};
 		manager.registerDirectories(rootDirectories);
 
 		// Load all the metadata
-		manager.readMetadata("Clustered", function() {
+		manager.readMetadata("Buildings", function() {
 			// Run start-up function only AFTER metadata is loaded
 			startUp();
 		});
