dev-114-BMRS-EIC-DUKES: Moved visualisation files.

--- a/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/index.html
+++ b/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/index.html
@@ -75,7 +75,7 @@
 
 		// We could have wholesale data packages, so register multiple possible root directories
 		let rootDirectories = {
-			"Mixed": "./data/set-1"
+			"Mixed": "./data"
 		};
 		manager.registerDirectories(rootDirectories);
 
