--- a/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/index.html
+++ b/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/index.html
@@ -96,16 +96,14 @@
 			let title = `<h1>UK Gas Grid</h1>`;
 			let content = `
 					<p>The map to the left shows a sample of the power system data within the UK Digital Twin.</p>
-		<p>Intake terminals (<span style="color:#108dcc;">blue</span>), offtakes (<span style="color:#B42222;">red</span>), and pipes (<span style="color:#B1B1B1;">grey</span>) from the gas transmission system are shown for the mainland UK.</p>
-		<p>Select an intake terminal (<span style="color:#108dcc;">blue</span>) to see the recent flow of gas into the grid. This data is pulled from the UK Digital Twin and is updated on a daily basis.​</p>
+		<p>Power Plants (<span style="color:#B42222;">red</span>)from the UK Power System are shown.</p>
+		<p>Select a Power Plant (<span style="color:#B42222;">red</span>) to see the recent power generation level (for the grid). This data is pulled from the UK Digital Twin and is updated on a daily basis.​</p>
 				`;
 			let legend = `	
 					<b>Legend:</b>
 					<br/>
 					<div id="padding" style="height: 6px;"></div>
-					<div style="padding-bottom: 2px;"><img width="24px" src="./img/legend-terminal.svg"/>Terminals</div>
-					<div style="padding-bottom: 2px;"><img width="24px" src="./img/legend-offtake.svg"/>Offtakes</div>
-					<div style="padding-bottom: 2px;"><img width="24px" src="./img/legend-pipe.svg"/>Pipelines</div>
+					<div style="padding-bottom: 2px;"><img width="8px" src="./img/RedCircle.png"/>Power Plants</div>
 				`;
 
 			var footer = `Data updated on `;
