Revert "dev-combined-vis: Fixed issues rendering charts of OffsetTime values, also updated sample data to include examples."
This reverts commit fea1d4da37329fc28fdf195a5495545e607e5df8.

--- a/web/UKDigitalTwin/example-dt-vis/index.html
+++ b/web/UKDigitalTwin/example-dt-vis/index.html
@@ -98,7 +98,7 @@
 		manager.registerDirectories(rootDirectories);
 
 		// Load all the metadata
-		manager.readMetadata("Mixed", function() {
+		manager.readMetadata("Buildings", function() {
 			// Run start-up function only AFTER metadata is loaded
 			startUp();
 		});
