Modified naming of dataset to match dev-combined-vis.

--- a/web/UKDigitalTwin/example-dt-vis/index.html
+++ b/web/UKDigitalTwin/example-dt-vis/index.html
@@ -90,7 +90,7 @@
 
 		// We could have wholesale data packages, so register multiple possible root directories
 		let rootDirectories = {
-			"Churchill": "./data/set-0",
+			"3D": "./data/set-0",
 			"Mixed": "./data/set-1",
 			"Zoom Limited": "./data/set-2",
 			"Clustered": "./data/set-3",
