--- a/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/index.html
+++ b/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/index.html
@@ -79,7 +79,7 @@
 		// This will be visible by inspecting the webpage anyway (either by looking at the source code,
 		// or inspecting the network packets). If it needs protection, limit it's usage to certain source
 		// domains via your MapBox account settings.
-		let mapboxAPI = "pk.eyJ1IjoiY21jbGlubm92YXRpb25zIiwiYSI6ImNrbGdqa3RoNDFnanIyem1nZXR3YzVhcmwifQ.hVk983r6YYlmFE8kSMbzhA";
+		let mapboxAPI = "pk.eyJ1IjoibXNmZjIiLCJhIjoiY2t2bDRuZG9xMDg3dzJvbTh4NnNremgydyJ9.H5CctfdCnbxZDEt7R1w3yA";
 
 	</script>
 
