--- a/web/UKDigitalTwin/example-dt-vis/cesium.html
+++ b/web/UKDigitalTwin/example-dt-vis/cesium.html
@@ -96,7 +96,7 @@
 
 		// We could have wholesale data packages, so register multiple possible root directories
 		let rootDirectories = {
-			"3D": "./data/set-0",
+			"BIM": "./data/set-5",
 			"Mixed": "./data/set-1",
 			"Zoom Limited": "./data/set-2",
 			"Clustered": "./data/set-3",
@@ -105,7 +105,7 @@
 		manager.registerDirectories(rootDirectories);
 
 		// Load all the metadata
-		manager.readMetadata("Mixed", function() {
+		manager.readMetadata("BIM", async function() {
 			// Run start-up function only AFTER metadata is loaded
 			startUp();
 		});
@@ -134,13 +134,30 @@
 		}
 
 		// Will run once metadata is loaded asynchronously
-		function startUp() {
+		async function startUp() {
 			// Create the Cesium map
 			Cesium.Ion.defaultAccessToken = cesiumAPI;
 			let map = new CesiumWrapper("map");
 			manager.initialiseMap(map);
 			var iconHandler = new IconHandler(map);
 
+			const viewer = map._viewer;
+			const url = await Cesium.IonResource.fromAssetId(895906);
+			const position = Cesium.Cartesian3.fromDegrees(0.10188, 52.21200, 0);
+			const orientation = Cesium.Transforms.headingPitchRollQuaternion(
+				position,
+				new Cesium.HeadingPitchRoll(1.6, 0, 0)
+			)
+			const entity = viewer.entities.add({
+				name: "./data/set-5/Churchill.gltf",
+				position: position,
+				orientation: orientation,
+				model: {
+				uri: "./data/set-5/Churchill.gltf",
+				scale: 100,
+				},
+			});
+			
 			// Provide some default content for the side panel
 			let title = `<h1>Example Visualisation</h1>`;
 			let content = `
