1161-dev-gas-grid-input-agent: Modified visualisation parameters to improve the GasGrid visualisation.

--- a/Agents/GasGridAgent/gasgridagent/visualisation/index.html
+++ b/Agents/GasGridAgent/gasgridagent/visualisation/index.html
@@ -140,12 +140,13 @@
 					This data is pulled from the UK Digital Twin and is updated on a daily basis.​</p>
 				`;
 			let legend = `	
-					<b>Legend:</b>
-					<br/>
+			    <div id="legend">
+			        <b>Legend:</b><br/>
 					<div id="padding" style="height: 6px;"></div>
 					<div style="padding-bottom: 2px;"><img width="24px" src="./img/legend-terminal.svg"/>Terminals</div>
 					<div style="padding-bottom: 2px;"><img width="24px" src="./img/legend-offtake.svg"/>Offtakes</div>
 					<div style="padding-bottom: 2px;"><img width="24px" src="./img/legend-pipe.svg"/>Pipelines</div>
+				</div>
 				`;
 
 			var footer = `Data updated on `;
