--- a/web/UKDigitalTwin/example-dt-vis/index.html
+++ b/web/UKDigitalTwin/example-dt-vis/index.html
@@ -90,15 +90,12 @@
 
 		// We could have wholesale data packages, so register multiple possible root directories
 		let rootDirectories = {
-			"Mixed": "./data/set-1",
-			"Zoom Limited": "./data/set-2",
-			"Clustered": "./data/set-3",
-			"Buildings": "./data/set-4"
+			"Ship": "./data/ship"
 		};
 		manager.registerDirectories(rootDirectories);
 
 		// Load all the metadata
-		manager.readMetadata("Mixed", function() {
+		manager.readMetadata("Ship", function() {
 			// Run start-up function only AFTER metadata is loaded
 			startUp();
 		});
