dev-dome-vis: updated title and content

--- a/web/dome-project/index.html
+++ b/web/dome-project/index.html
@@ -133,9 +133,9 @@
 			var iconHandler = new IconHandler(map);
 
 			// Provide some default content for the side panel
-			let title = `<h1>CMCL Maritime Showcase</h1>`;
+			let title = `<h1>DOME 4.0</h1>`;
 			let content = `
-					This showcase entails CMCL's chemistry knowledge graph (KG) and provides a consistent framework to store, access and interpret vastly growing chemical data, marine emissions data, location data and air quality data, in an intelligent manner using the DOME 4.0 ecosystem. CMCL will establish semantic interoperability between a variety of data sources (ship location/positioning databases, air quality - dispersion modelling software, weather conditions).
+					This B2B showcase entails CMCL's chemistry knowledge graph (KG) and provides a consistent framework to store, access and interpret vastly growing chemical data, marine emissions data, ship location data and air quality data, in an intelligent manner. The use of ontologies and CMCL’s agent ecosystem enables semantic interoperability between a variety of data sources (ship location/positioning databases, weather conditions, geospatial description of buildings) and software (multi-dimensional dispersion modelling).
 				`;
 			let legend = `	
 					<br/>
