--- a/web/UKDigitalTwin/example-dt-vis/cesium/cesium.html
+++ b/web/UKDigitalTwin/example-dt-vis/cesium/cesium.html
@@ -18,8 +18,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.8.0/suncalc.min.js"></script>
 
     <!-- CesiumJS -->
-    <!-- <script src="https://cesium.com/downloads/cesiumjs/releases/1.88/Build/Cesium/Cesium.js"></script> -->
-    <script src="./Cesium/Cesium.js"></script>
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.88/Build/Cesium/Cesium.js"></script>
+    <!-- <script src="./Cesium/Cesium.js"></script> -->
     <link href="https://cesium.com/downloads/cesiumjs/releases/1.88/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 
 	<!--
