--- a/BIMCesiumVisualisation/index.html
+++ b/BIMCesiumVisualisation/index.html
@@ -50,16 +50,6 @@
       border-radius: 4px;
       border: 1px solid #444;
       box-shadow: 0 0 10px 1px #000;
-      transform: translate(100%, 0);
-      visibility: hidden;
-      opacity: 0;
-      /*for closing transition: visibility 0s 0.2s, opacity 0.2s ease-in, transform 0.2s ease-in;*/
-    }
-
-    .biminfobox-visible {
-      transform: translate(0, 0);
-      visibility: visible;
-      opacity: 1;
     }
 
     .biminfobox-title {
@@ -104,6 +94,33 @@
     #bim-infobox-table tr:nth-child(odd) {
       background-color: rgba(84, 84, 84, 0.25);
     }
+
+    #close {
+      display: none;
+      position:absolute;
+      top:75px;
+      right: 30px;
+      background: transparent;
+      border: none;
+      border-radius: 2px;
+      font-weight: bold;
+      font-size: 16px;
+      padding: 0 5px;
+      margin: 0;
+      color: white;
+    }
+    #close:focus {
+      background: rgba(238, 136, 0, 0.44);
+      outline: none;
+    }
+    #close:hover {
+      background: #888;
+      color: #000;
+    }
+    #close:active {
+      background: #a00;
+      color: #000;
+    } 
   </style>
 </head>
 
@@ -111,14 +128,14 @@
   <div id="cesiumContainer"></div>
   <div class="panel">
     <label for="toggleFeature"> Show/Hide roof and ceiling</label>
-    <input type="checkbox" id="toggleFeature" onclick="hideFeature()">
+    <input type="checkbox" id="toggleFeature" onclick="hideFeature()"> 
   </div>
   <script>
     // Your access token can be found at: https://cesium.com/ion/tokens
     // Replace `your_access_token` with your Cesium ion access token
     Cesium.Ion.defaultAccessToken = 'your access token';
 
-    // <----------------------------- Functions -----------------------------> 
+    /* <----------------------------- Functions -----------------------------> */
     /**
      * Add the tileset to the viewer and set its model matrix for geolocation
      * @param cesiumtileset   name of tileset.json file
@@ -137,9 +154,7 @@
       )
     }
 
-    /**
-     * Show or hide the ceiling depending on checkbox input
-     */
+    // Show or hide the ceiling depending on checkbox input
     function hideFeature() {
       var checkBox = document.getElementById("toggleFeature");
       if (checkBox.checked == true) {
@@ -147,6 +162,21 @@
       } else {
         tileset_ceiling.show = true;
       }
+    }
+
+    // Close the metadata infobox on click
+    function closeMetadata() {
+      const metadataBox = document.getElementsByClassName("biminfobox")[0];
+      // Set transition time and effects for metadata infobox
+      window.setTimeout(function () {
+        metadataBox.style.transform = 'translate(100%, 0)';
+        metadataBox.style.opacity = 0;
+        metadataBox.style.visibility = 'hidden';
+        metadataBox.style.transition = "visibility 0s 0.2s, opacity 0.2s ease-in, transform 0.2s ease-in";
+
+        // Remove close button at same time
+        closeElement.style.display = 'none';
+      }, 0.2);
     }
 
     /**
@@ -171,17 +201,16 @@
         } else {
           htmlTable += `<tr><td>${propertyKey} :</td> <td> ${propertyValue}</td></tr>`;
         }
-
       }
       html += "</div>" + htmlTable + "</table>";
       return html;
     }
 
-    // <----------------------------- Script Content -----------------------------> 
+    /*<----------------------------- Script Content -----------------------------> */
     // Create a new viewer object
     const viewer = new Cesium.Viewer("cesiumContainer");
 
-    // Add new HTML elements
+    /* Add new HTML elements */
     // Creating a metadata overlay element when mouse moves over an asset
     const promptOverlay = document.createElement("div");
     viewer.container.appendChild(promptOverlay);
@@ -191,6 +220,14 @@
     const metadataBox = document.createElement("div");
     viewer.container.appendChild(metadataBox);
     metadataBox.className = "biminfobox";
+    
+    // Create a close button for the infobox
+    const closeElement = document.createElement("INPUT");
+    closeElement.id="close";
+    closeElement.setAttribute("type", "button");
+    closeElement.value="X";
+    closeElement.onclick=closeMetadata;
+    viewer.container.appendChild(closeElement);
 
     // Add tilesets to the viewer
     const tileset_bim = addTileset("tileset_bim.json");
@@ -227,11 +264,15 @@
         handler.setInputAction(function (movement) {
           // Display the infobox       
           metadataBox.style.display = "block";
+          // Set transition time and effects
           window.setTimeout(function () {
             metadataBox.style.transform = 'translate(0, 0)';
             metadataBox.style.opacity = 1;
             metadataBox.style.visibility = 'visible';
             metadataBox.style.transition = "opacity 0.2s ease-out, transform 0.2s ease-out";
+
+            // Display the close button at same time of transition
+            closeElement.style.display = "block";
           }, 0.2);
           // Text input for metadata info box
           overlayText += createMetadataHtml(contentMetadata);
@@ -248,6 +289,7 @@
         }, Cesium.ScreenSpaceEventType.LEFT_CLICK);
       }
     }, Cesium.ScreenSpaceEventType.MOUSE_MOVE);
+
 
   </script>
 </body>
