dev-bim-cesium-visualisation: Split javascript into several .js files, Fix bug in checkbox hiding/showing ceiling tileset

--- a/BIMCesiumVisualisation/src/index.html
+++ b/BIMCesiumVisualisation/src/index.html
@@ -6,8 +6,8 @@
 <body>
   <div id="cesiumContainer"></div>
   <div class="toolbar">
-    <label for="toggleFeature"> Show/Hide roof and ceiling</label>
-    <input type="checkbox" id="toggleFeature" onclick="hideFeature()"> 
+    <label for="toggleFeature"> Hide roof and ceiling</label>
+    <input type="checkbox" id="toggleFeature"> 
   </div>
 </body>
 </html>
