--- a/web/digital-twin-vis-framework/example-cesium-vis/index.html
+++ b/web/digital-twin-vis-framework/example-cesium-vis/index.html
@@ -49,34 +49,26 @@
                 <div id="cameraContainer" class="controlBlock">
                     <div id="controlTitle" class="controlTitle">
                         <p>Camera</p>
-                        <div class="tooltip">
-                            <label class="switch"><input type="checkbox" onclick="MapBoxUtils.setTiltshift(this.checked)"><span class="slider round"><p>DoF</p></label>
-                            <span class="tooltiptext">Toggle depth of field effect</span>
-                        </div>
                     </div>
                     <div class="controlContents">
-                        <a href="#" onclick="MapBoxUtils.changeCamera('bird')">Bird's Eye</a><br/>
-                        <a href="#" onclick="MapBoxUtils.changeCamera('pitch')">Pitched</a>
+                        <a href="#" onclick="CesiumUtils.changeCamera('bird')">Bird's Eye</a><br/>
+                        <a href="#" onclick="CesiumUtils.changeCamera('pitch')">Pitched</a>
                     </div>
                 </div>
 
                 <!-- Terrain controls -->
                 <div id="terrainContainer" class="controlBlock">
-                    <div id="controlTitle" class="controlTitle">
-                        <p>Terrain</p>
-                        <div class="tooltip">
-                            <label class="switch"><input type="checkbox" onclick="MapBoxUtils.set3DTerrain(this.checked)"><span class="slider round"><p>3D</p></label>
-                            <span class="tooltiptext">Toggle 3D terrain</span>
-                        </div>
+                    <div id="controlTitle" class="controlTitle" style="padding-right: 0px !important;">
+                        <p>Imagery</p>
                     </div>
                     <div class="controlContents">
-                        <input type="radio" name="terrain" id="light" onclick="MapBoxUtils.changeTerrain('light')" checked>
+                        <input type="radio" name="terrain" id="light" onclick="CesiumUtils.changeTerrain('light')">
                         <label for="light">Light</label><br/>
-                        <input type="radio" name="terrain" id="dark" onclick="MapBoxUtils.changeTerrain('dark')">
+                        <input type="radio" name="terrain" id="dark" onclick="CesiumUtils.changeTerrain('dark')" checked>
                         <label for="dark">Dark</label><br/>
-                        <input type="radio" name="terrain" id="outdoors" onclick="MapBoxUtils.changeTerrain('outdoors')">
+                        <input type="radio" name="terrain" id="outdoors" onclick="CesiumUtils.changeTerrain('outdoors')">
                         <label for="outdoors">Outdoors</label><br/>
-                        <input type="radio" name="terrain" id="satellite" onclick="MapBoxUtils.changeTerrain('satellite')">
+                        <input type="radio" name="terrain" id="satellite" onclick="CesiumUtils.changeTerrain('satellite')">
                         <label for="satellite">Satellite</label><br/>
                     </div>
                 </div>
@@ -85,10 +77,6 @@
                 <div id="layerContainer" class="controlBlock">
                     <div id="controlTitle"  class="controlTitle">
                         <p>Layers</p>
-                        <div class="tooltip" id="placenameContainer">
-                            <label class="switch"><input type="checkbox" onclick="MapBoxUtils.setPlacenames(this.checked)" checked><span class="slider round"><p>PNs</p></label>
-                            <span class="tooltiptext">Toggle place names, labels, and roads </span>
-                        </div>
                     </div>
                     <div class="controlContents">
                         <div id="layerTreeContainer">
@@ -162,8 +150,10 @@
             $("#sidePanelInner").tabs();
 
             // ===== CUSTOMISABLE =====
-            // Enter MapBox API key here, even in Cesium visualisations!
+
+            // Enter Mapbox API key here, even in Cesium visualisations!
             MapHandler.MAP_API = "pk.eyJ1IjoibWhpbGxtYW4iLCJhIjoiY2t1NW5wMDF3MnBzaDJ2cWhyZ2MxbHh4diJ9.TPv5CXdhGvFPkL28tTeXTA";
+
             // ===== CUSTOMISABLE =====
 
             // Create a new manager instance
@@ -192,13 +182,34 @@
                     "target": [7.605, 49.196, 750],
                     "heading": 0.0,
                     "pitch": -45,
-                    "roll": 0.0,
-                    "style": "light-v10"
+                    "roll": 0.0
                 };
                 // ===== CUSTOMISABLE =====
 
                 // Initialise the map object
                 manager.initialiseMap();
+
+                // ===== CUSTOMISABLE =====
+                // Set the default content in the "General" tab of the side panel
+                manager.getPanelHandler().setTitle("<h1>Example Visualisation</h1>");
+                manager.getPanelHandler().setContent(`
+                    <p>This example visualisation has been put together to demonstrate the intended use of the centralised Digital Twin Visualisation Framework (DTVF).
+                    This framework has been designed to make it easier for users not experienced with Typescript (or the mapping libraries) to quickly & easily put 
+                    together a new Digital Twin visualisation. It is intended for developers to use this example visualisation to gain an understanding of the DTVF 
+                    before attempting to create their own visualisation; to do that, this example can be copied and used as a starting point.</p>
+                    <p>This centralised framework expects users to have structured their data in a particular format, and provide a number of associated metadata files. 
+                    Before starting, ensure your data meets this format by reading the <a href="https://github.com/cambridge-cares/TheWorldAvatar/wiki/DTVF-v2.0.0" target="_blank">GitHub wiki</a>. 
+                    This page also details how the framework functions, and how to configure your visualisation to use it.</p>
+                    <p>Note that this example has no version number as it is not intended for release; instead it should be updated to reflect the most recent version of 
+                    the framework itself. It's also worth noting that this example uses the currently hosted version of the framework library (i.e. from the CMCL KG website), 
+                    not the files within the repository.</p>
+                `);
+                
+                manager.getPanelHandler().setFooter("The World Avatar, " + new Date().getFullYear());
+                // ===== CUSTOMISABLE =====
+
+                // Save general tab state as default
+                manager.getPanelHandler().storeDefault();
 
                 // Plot data
                 manager.plotData();
