add function to load image on roof of building

--- a/BIMCesiumVisualisation/src/index.html
+++ b/BIMCesiumVisualisation/src/index.html
@@ -7,7 +7,9 @@
   <div id="cesiumContainer"></div>
   <div class="toolbar">
     <label for="toggleFeature"> Hide roof and ceiling</label>
-    <input type="checkbox" id="toggleFeature"> 
+    <input type="checkbox" id="toggleFeature">
+    <label for="solar"> show solar panel</label>
+    <input type="checkbox" id="solar">
   </div>
 </body>
 </html>
