--- a/BIMCesiumVisualisation/src/index.html
+++ b/BIMCesiumVisualisation/src/index.html
@@ -10,6 +10,8 @@
     <input type="checkbox" id="toggleFeature">
     <label for="solar"> show solar panel</label>
     <input type="checkbox" id="solar">
+    <label for="customsolar"> draw solar panel</label>
+    <input type="checkbox" id="customsolar">
   </div>
 </body>
 </html>
