dev-ukpn-pylons: legend
added legend images

--- a/web/digital-twin-vis-framework/pylon-visualisation/legend.html
+++ b/web/digital-twin-vis-framework/pylon-visualisation/legend.html
@@ -29,23 +29,45 @@
     <h3>Vegetation:</h3>
     <br/>
     <div id="legend-entry">
-        <img src="./data/ukpn/icons/Trees-Woody-Plants-Hedgerows.png">
+        <img src="./data/vegetation/icons/Trees-Woody-Plants-Hedgerows.png">
         <p>Trees, Woody Plants, Hedgerows</p>
     </div>
     <div id="legend-entry">
-        <img src="./data/ukpn/icons/Perennial-Crops-and-Isolated-Trees.png">
+        <img src="./data/vegetation/icons/Perennial-Crops-and-Isolated-Trees.png">
         <p>Perennial Crops and Isolated Trees</p>
     </div>
     <div id="legend-entry">
-        <img src="./data/ukpn/icons/Heathland-and-Bracken.png">
+        <img src="./data/vegetation/icons/Heathland-and-Bracken.png">
         <p>Heathland and Bracken</p>
     </div>
     <div id="legend-entry">
-        <img src="./data/ukpn/icons/Short-Rotation-Coppice.png">
+        <img src="./data/vegetation/icons/Short-Rotation-Coppice.png">
         <p>Short Rotation Coppice</p>
     </div>
     <div id="legend-entry">
-        <img src="./data/ukpn/icons/Unknown-or-Mixed-Vegetation.png">
+        <img src="./data/vegetation/icons/Unknown-or-Mixed-Vegetation.png">
         <p>Unknown or Mixed Vegetation</p>
+    </div>
+    <h3>Woodland:</h3>
+    <br/>
+    <div id="legend-entry">
+        <img src="./data/woodland/icons/felled_failed_or_ground_prep.png">
+        <p>Woodland</p>
+    </div>
+    <div id="legend-entry">
+        <img src="./data/woodland/icons/light_woodland.png">
+        <p>Light Woodland</p>
+    </div>
+    <div id="legend-entry">
+        <img src="./data/woodland/icons/uncertain.png">
+        <p>Felled, Failed, or Ground Prep</p>
+    </div>
+    <div id="legend-entry">
+        <img src="./data/woodland/icons/woodland.png">
+        <p>Uncertain</p>
+    </div>
+    <div id="legend-entry">
+        <img src="./data/woodland/icons/powerline.png">
+        <p> Powerline</p>
     </div>
 </div>
