dev-psdt: Copied Mapbox API key from Mapbox example visualisation into Cesium index file.

--- a/Deploy/stacks/psdt/vis-cesium/index.html
+++ b/Deploy/stacks/psdt/vis-cesium/index.html
@@ -137,7 +137,7 @@
 
             // ===== CUSTOMISABLE =====
             // Enter Mapbox API key here, even in Cesium visualisations!
-            MapHandler.MAP_API = "";
+            MapHandler.MAP_API = "pk.eyJ1IjoibWhpbGxtYW4iLCJhIjoiY2t1NW5wMDF3MnBzaDJ2cWhyZ2MxbHh4diJ9.TPv5CXdhGvFPkL28tTeXTA";
             // ===== CUSTOMISABLE =====
 
             // Create a new manager instance
