dev-dtvf-3.1.0: Updated code to better handle default visibility states of layers in Cesium implementation.

--- a/web/digital-twin-vis-framework/example-mapbox-vis/index.html
+++ b/web/digital-twin-vis-framework/example-mapbox-vis/index.html
@@ -53,8 +53,7 @@
                         </div>
                     </div>
                     <div class="controlContents">
-                        <a href="#" onclick="MapBoxUtils.changeCamera('bird')">Bird's Eye</a><br/>
-                        <a href="#" onclick="MapBoxUtils.changeCamera('pitch')">Pitched</a>
+                        <a href="#" onclick="MapBoxUtils.resetCamera()">Reset to default</a><br/>
                     </div>
                 </div>
 
@@ -67,15 +66,15 @@
                             <span class="tooltiptext">Toggle 3D terrain</span>
                         </div>
                     </div>
-                    <div class="controlContents">
-                        <input type="radio" name="terrain" id="light" onclick="MapBoxUtils.changeTerrain('light')" checked>
+                    <div id="imageryContainer" class="controlContents">
+                        <!-- <input type="radio" name="terrain" id="light" onclick="MapBoxUtils.changeTerrain('light')" checked>
                         <label for="light">Light</label><br/>
                         <input type="radio" name="terrain" id="dark" onclick="MapBoxUtils.changeTerrain('dark')">
                         <label for="dark">Dark</label><br/>
                         <input type="radio" name="terrain" id="outdoors" onclick="MapBoxUtils.changeTerrain('outdoors')">
                         <label for="outdoors">Outdoors</label><br/>
                         <input type="radio" name="terrain" id="satellite" onclick="MapBoxUtils.changeTerrain('satellite')">
-                        <label for="satellite">Satellite</label><br/>
+                        <label for="satellite">Satellite</label><br/> -->
                     </div>
                 </div>
 
