dev-dtvf-3.1.0: Removed CMCL API keys

--- a/web/digital-twin-vis-framework/example-mapbox-vis/index.html
+++ b/web/digital-twin-vis-framework/example-mapbox-vis/index.html
@@ -154,7 +154,7 @@
 
             // ===== CUSTOMISABLE =====
             // Enter Mapbox API key here!
-            MapHandler.MAP_API = "pk.eyJ1IjoibWhpbGxtYW4iLCJhIjoiY2t1NW5wMDF3MnBzaDJ2cWhyZ2MxbHh4diJ9.TPv5CXdhGvFPkL28tTeXTA";
+            MapHandler.MAP_API = "";
             // ===== CUSTOMISABLE =====
 
             // Create a new manager instance
