--- a/web/digital-twin-vis-framework/example-cesium-vis/index.html
+++ b/web/digital-twin-vis-framework/example-cesium-vis/index.html
@@ -127,9 +127,9 @@
             $("#sidePanelInner").tabs();
 
             // ===== CUSTOMISABLE =====
-            // Enter Mapbox API key here, even in Cesium visualisations!
-            MapHandler.MAP_USER = "cmclinnovations";
-            MapHandler.MAP_API = "pk.eyJ1IjoiY21jbGlubm92YXRpb25zIiwiYSI6ImNrbGdqa3RoNDFnanIyem1nZXR3YzVhcmwifQ.hVk983r6YYlmFE8kSMbzhA";
+            // Enter Mapbox account name and API key here, even in Cesium visualisations!
+            MapHandler.MAP_USER = "";
+            MapHandler.MAP_API = "";
             // ===== CUSTOMISABLE =====
 
             // Create a new manager instance
