dev-dtvf-3.1.0: Adding missing specification of Mapbox account name in template index file.

--- a/web/digital-twin-vis-framework/example-mapbox-vis/index.html
+++ b/web/digital-twin-vis-framework/example-mapbox-vis/index.html
@@ -153,7 +153,8 @@
             $("#sidePanelInner").tabs();
 
             // ===== CUSTOMISABLE =====
-            // Enter Mapbox API key here!
+            // Enter Mapbox account name and API key here!
+			MapHandler.MAP_USER = "";
             MapHandler.MAP_API = "";
             // ===== CUSTOMISABLE =====
 
