dev-psdt: Translated labels in Cesium visualisation into German.

--- a/Deploy/stacks/psdt/vis-cesium/index.html
+++ b/Deploy/stacks/psdt/vis-cesium/index.html
@@ -49,17 +49,17 @@
                 <!-- Camera controls -->
                 <div id="cameraContainer" class="controlBlock">
                     <div id="controlTitle" class="controlTitle">
-                        <p>Camera</p>
+                        <p>Kamera</p>
                     </div>
                     <div class="controlContents">
-                        <a href="#" onclick="CesiumUtils.resetCamera()">Reset to default</a>
+                        <a href="#" onclick="CesiumUtils.resetCamera()">Zurücksetzen</a>
                     </div>
                 </div>
 
                 <!-- Terrain controls -->
                 <div id="terrainContainer" class="controlBlock">
                     <div id="controlTitle" class="controlTitle" style="padding-right: 0px !important;">
-                        <p>Imagery</p>
+                        <p>Kartendarstellung</p>
                     </div>
                     <div id="imageryContainer" class="controlContents">
                     </div>
@@ -92,16 +92,16 @@
         <div id="sidePanel" class="large expanded">
             <div class="tooltip" id="slideButtonContainer">
                 <i class="fas fa-chevron-right" id="slideButton" width="16px" class="leftButton" height="16px" onclick="manager.getPanelHandler().toggleExpansion()"></i>
-                <span class="tooltiptext">Expand/Collapse</span>
+                <span class="tooltiptext">Aufklappen/Zuklappen</span>
             </div>
             <div class="tooltip" id="expandButtonContainer">
                 <i class="fas fa-expand" id="expandButton" width="16px" class="rightButton" height="16px" onclick="manager.getPanelHandler().toggleMode()"></i>
-                <span class="tooltiptext">Maximise/Minimise</span>
+                <span class="tooltiptext">Maximieren/Minimieren</span>
             </div>
             <div id="sidePanelInner">
                 <ul>
-                    <li><a href="#sidePanelGeneral">General</a></li>
-                    <li><a href="#sidePanelLegend">Legend</a></li>
+                    <li><a href="#sidePanelGeneral">Allgemein</a></li>
+                    <li><a href="#sidePanelLegend">Legende</a></li>
                     <li><a href="#sidePanelLinks">Links</a></li>
                 </ul>
                 <div id="sidePanelGeneral">
