dev-psdt: Translated layer label in Cesium visualisation into German.

--- a/Deploy/stacks/psdt/vis-cesium/index.html
+++ b/Deploy/stacks/psdt/vis-cesium/index.html
@@ -68,7 +68,7 @@
                 <!-- Layer controls -->
                 <div id="layerContainer" class="controlBlock">
                     <div id="controlTitle"  class="controlTitle">
-                        <p>Layers</p>
+                        <p>Kartenebenen</p>
                     </div>
                     <div class="controlContents">
                         <div id="layerTreeContainer">
