dev-visualisation: updated data.json

--- a/Deploy/stacks/KingsLynn/DTVF/index.html
+++ b/Deploy/stacks/KingsLynn/DTVF/index.html
@@ -182,22 +182,16 @@
 					It combines static building data, meta data about building properties, time series data of environmental
                     observations as well as information about latest flood alerts and flood warnings.<br>
                     Building data includes:
-                    <ul>
-                        <li>Static building representation in LOD1, including base elevation as well as building height</li>
-                        <li>Unique Property Reference Numbers (UPRNs)</li>
-                        <li>Construction characteristics from Energy Performance Certificates</li>
-                        <li>Information about previous sales transactions</li>
-                    </ul>
+                        Static building representation in LOD1, including base elevation as well as building height
+                        Unique Property Reference Numbers (UPRNs)
+                        Construction characteristics from Energy Performance Certificates
+                        Information about previous sales transactions
                     Envrionmental observations include:
-                    <ul>
-                        <li>Weather observations and forecasts from MetOffice</li>
-                        <li>Air quality observations</li>
-                        <li>River level data</li>
-                    </ul>
+                        Weather observations and forecasts from MetOffice
+                        Air quality observations
+                        River level data
                     Flood warnings/alerts include:
-                    <ul>
-                        <li>Daily raised official flood warnings from Environment Agency</li>
-                    </ul>
+                        Daily raised official flood warnings from Environment Agency
 					.</p>
                 `);
                 
