--- a/web/digital-twin-vis-framework/example-mapbox-vis/index.html
+++ b/web/digital-twin-vis-framework/example-mapbox-vis/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <!-- ===== CUSTOMISABLE ===== -->
-        <title>DTVF v3.2.0</title>
+        <title>DTVF v3.3.0</title>
         <!-- ===== CUSTOMISABLE ===== -->
 
         <!-- JS -->
@@ -12,7 +12,7 @@
         <script src="https://cdn.jsdelivr.net/gh/hummingbird-dev/hummingbird-treeview@v3.0.4/hummingbird-treeview.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-adapter-moment/1.0.0/chartjs-adapter-moment.js"></script>
-        <script src="https://kg.cmclinnovations.com/cdn/dtvf/3.2.0/dtvf.min.js"></script>
+        <script src="https://kg.cmclinnovations.com/cdn/dtvf/3.3.0/dtvf.min.js"></script>
 
         <!-- ===== CUSTOMISABLE ===== -->
         <!-- JavaScript files to provide functionality specifically for this visualisation instance can go here. -->
@@ -24,7 +24,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/gh/hummingbird-dev/hummingbird-treeview@v3.0.4/hummingbird-treeview.min.css" rel="stylesheet">
         <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet">
-        <link href="https://kg.cmclinnovations.com/cdn/dtvf/3.2.0/dtvf.min.css" rel="stylesheet" />
+        <link href="https://kg.cmclinnovations.com/cdn/dtvf/3.3.0/dtvf.min.css" rel="stylesheet" />
 
         <!-- ===== CUSTOMISABLE ===== -->
         <!-- CSS files to provide styling specifically for this visualisation instance can go here. -->
@@ -95,23 +95,6 @@
                     <div id="coordsContainer" style="width: 100%; height: 100%;"></div>
                 </div>
             </div>
-
-            <!-- Search controls -->
-            <div id="finderContainer" class="controlBlock expanded" style="display:none;">
-                <label style="width:100px; height:100%; display:inline-block; color:white; line-height:40px;">Search by</label>
-                <select name="search-select" id="search-select"></select>
-
-                <input type="text" id="findInput" name="findInput" placeholder="Enter search term..." style="height:100%; width:calc(100% - 390px); padding-left:10px;" oninput="manager.updateSearch(this)"></input>
-
-                <div class="tooltip" style="float:right; width:40px; height:100%; text-align:center; display:table; cursor:pointer;" onclick="manager.hideSearch()">
-                    <i class="fas fa-chevron-down" style="width:100%; height:100%; font-size:18pt! important; color:white; display:table-cell; vertical-align:middle;"></i>
-                    <span class="tooltiptext">Hide control</span>
-                </div>
-                <div class="tooltip" style="float:right; width:40px; height:100%; text-align:center; display:table; cursor:pointer;" onclick="manager.cancelSearch()">
-                    <i class="fas fa-times" style="width:100%; height:100%; font-size:18pt! important; color:white; display:table-cell; vertical-align:middle;"></i>
-                    <span class="tooltiptext">Cancel search</span>
-                </div>
-            </div>
         </div>
 
         <!-- Side panel for content and metdata -->
@@ -154,8 +137,8 @@
 
             // ===== CUSTOMISABLE =====
             // Enter Mapbox account name and API key here!
-			MapHandler.MAP_USER = "";
-            MapHandler.MAP_API = "";
+			MapHandler.MAP_USER = "cmclinnovations";
+            MapHandler.MAP_API = "pk.eyJ1IjoiY21jbGlubm92YXRpb25zIiwiYSI6ImNrbGdqa3RoNDFnanIyem1nZXR3YzVhcmwifQ.hVk983r6YYlmFE8kSMbzhA";
             // ===== CUSTOMISABLE =====
 
             // Create a new manager instance
@@ -172,7 +155,6 @@
             function start() {
                 // Initialise the map object
                 manager.initialiseMap();
-                
                
                 // ===== CUSTOMISABLE =====
                 // Set the default content in the "General" tab of the side panel
