--- a/web/digital-twin-vis-framework/example-cesium-vis/index.html
+++ b/web/digital-twin-vis-framework/example-cesium-vis/index.html
@@ -77,6 +77,14 @@
                     </div>
                 </div>
 
+                <!-- Help icon -->
+                <div id="helpContainer" class="controlBlock expanded" onclick="openHelpURL()">
+                    <div class="tooltip" id="coordEditor">
+                        <i class="fas fa-question fa-lg"></i>
+                        <span class="tooltiptext right">Help</span>
+                    </div>
+                </div>
+
                 <!-- Container for developer info -->
                 <div id="developerContainer" class="controlBlock" style="display: none;">
                     <div class="tooltip" id="coordEditor" style="float: right;">
@@ -144,18 +152,6 @@
              * Starts the visualisation setup process.
              */
              function start() {
-                // ===== CUSTOMISABLE =====
-                // Optionally provide default map settings.
-                // If no options are provided here , any included in the root group of the first stack that responds and loads
-                // will be used (this is unreliable, so if visualising multiple stacks, I recommend using this override). - Michael
-                let optionsOverride = {
-                    "target": [7.605, 49.196, 750],
-                    "heading": 0.0,
-                    "pitch": -45,
-                    "roll": 0.0
-                };
-                // ===== CUSTOMISABLE =====
-
                 // Initialise the map object
                 manager.initialiseMap();
 
